--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version>  
+    <configuration>
+        <release>17</release>  <!-- Alternative approach for Java 17 compatibility -->
+    </configuration>
+         </plugin>
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
